# DeckOps

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
ankiops/: anki_client.py  anki_to_markdown.py  cli.py  collection_serializer.py  config.py  markdown_to_anki.py  models.py
ankiops/card_templates/: AnkiOpsChoiceBack.template.anki  AnkiOpsChoiceFront.template.anki
deckops/: __init__.py  anki_client.py  anki_to_markdown.py  cli.py  collection_package.py  config.py  ensure_models.py  git.py  html_converter.py  init.py  log.py  markdown_converter.py  markdown_helpers.py  markdown_to_anki.py
deckops/data/: DeckOps Tutorial.md
deckops/models/: DeckOpsChoiceBack.template.anki  DeckOpsChoiceFront.template.anki  DeckOpsClozeBack.template.anki  DeckOpsClozeFront.template.anki  DeckOpsQABack.template.anki  DeckOpsQAFront.template.anki  Styling.css
tests/: test_choice.py  test_cloze.py  test_collection_package.py  test_html_converter.py  test_markdown_converter.py  test_roundtrip.py
