[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deckops"
version = "1.0.2"
description = "Manage Anki decks as Markdown files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "requests>=2.28.0",
    "html-to-markdown>=2.24.5",
    "mistune>=3.2.0",
    "pygments>=2.14.0",
]

[project.urls]
Repository = "https://github.com/visserle/DeckOps"
Issues = "https://github.com/visserle/DeckOps/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0"]

[project.scripts]
deckops = "deckops:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deckops*"]

[tool.setuptools.package-data]
deckops = ["data/*.md", "models/*.anki", "models/*.css"]

[tool.ruff]
line-length = 88
extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F"]
unfixable = ["F401"] # do not auto-remove unused imports

[tool.ruff.lint.pydocstyle]
convention = "pep257"
